# rust-9p

./: .gitignore  Cargo.toml
crates/cli/: Cargo.toml
flake-parts/: cargo.nix  pre-commit.nix
