[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.lints.clippy.pedantic]
level = "warn"
priority = -1

[workspace.package]
authors = ["Justin Rubek"]
edition = "2021"
homepage = "https://github.com/justinrubek/templates"
license = "MIT"
repository = "https://github.com/justinrubek/templates"
version = "0.1.0"

[profile.release]
# opt-level = 2 # fast and small wasm
